本地登录逻辑 ok

--- a/app/views/register.handlebars
+++ b/app/views/register.handlebars
@@ -1,20 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>register</title>
-</head>
-<body>
 <form action="/register" method="post">
     <p>
-        <label>Username:
+        <label>username:
             <input type="text" name="username" value="test"/>
         </label>
     </p>
 
     <p>
-        <label>Password:
+        <label>password:
             <input type="password" name="password" value="test"/>
         </label>
     </p>
@@ -23,5 +15,3 @@
         <button type="submit">register</button>
     </p>
 </form>
-</body>
-</html>
