--- a/app/views/login.handlebars
+++ b/app/views/login.handlebars
@@ -1,20 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
-</head>
-<body>
 <form action="/login" method="post">
     <p>
-        <label>Username:
+        <label>username:
             <input type="text" name="username" value="test"/>
         </label>
     </p>
 
     <p>
-        <label>Password:
+        <label>password:
             <input type="password" name="password" value="test"/>
         </label>
     </p>
@@ -27,5 +19,3 @@
         <a href="/auth/wechat">微信登录</a>
     </p>
 </form>
-</body>
-</html>
