登录和注册

--- a/app/views/login.handlebars
+++ b/app/views/login.handlebars
@@ -18,5 +18,6 @@
     <p>
         <a href="/auth/qq">QQ 登录</a>
         <a href="/auth/wechat">微信登录</a>
+        <a href="/auth/weibo">微博登录</a>
     </p>
 </form>
