--- a/app/views/register.handlebars
+++ b/app/views/register.handlebars
@@ -1,4 +1,5 @@
 <form action="/register" method="post">
+    {{#message}}{{.}}{{/message}}
     <p>
         <label>username:
             <input type="text" name="username" value="test"/>
