添加 qq 登录图标

--- a/app/views/login.handlebars
+++ b/app/views/login.handlebars
@@ -1,5 +1,5 @@
 <p>
-    <a href="/auth/qq">QQ 登录</a>
+    <a href="/auth/qq"><img src="//qzonestyle.gtimg.cn/qzone/vas/opensns/res/img/Connect_logo_7.png" alt=""></a>
     <a href="/auth/wechat">微信登录</a>
     <a href="/auth/weibo">微博登录</a>
 </p>
